# WinterDevBake

./: CMakeLists.txt  README.md
src/: ArticleGenerator.cpp  ArticleGenerator.h  CodeStyleGenerator.cpp  CodeStyleGenerator.h  CommentGeneration.cpp  CommentGeneration.h  MatchString.cpp  MatchString.h  PageBakeArguments.cpp  PageBakeArguments.h  PageGenerator.cpp  PageGenerator.h  Util.cpp  Util.h  WinterDevBake.cpp  main.cpp  sql.txt
